--- a/Ent/Ent.csproj
+++ b/Ent/Ent.csproj
@@ -35,11 +35,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="OpenGLDotNet">
-      <HintPath>..\..\OpenGLDotNet\bin\Release\OpenGLDotNet.dll</HintPath>
-    </Reference>
-    <Reference Include="SDL2-CS">
-      <HintPath>..\..\SDL2-CS-master\bin\Release\SDL2-CS.dll</HintPath>
+    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\OpenRCT\packages\OpenTK.1.1.1589.5942\lib\NET40\OpenTK.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,27 +55,20 @@
     <Compile Include="Entity.cs" />
     <Compile Include="EntitySystem.cs" />
     <Compile Include="Geometry\Geometry.cs" />
+    <Compile Include="Geometry\Quaternion.cs" />
     <Compile Include="Geometry\Vector2.cs" />
     <Compile Include="Geometry\Vector3.cs" />
     <Compile Include="Geometry\Vector4.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rendering\Graphics.cs" />
-    <Compile Include="UI\Components\GameDisplay.cs" />
-    <Compile Include="UI\Components\Legible.cs" />
-    <Compile Include="UI\Components\Placeable.cs" />
-    <Compile Include="UI\Components\Sizeable.cs" />
+    <Compile Include="UI\Camera.cs" />
     <Compile Include="UI\Window.cs" />
     <Compile Include="UI\WindowSystem.cs" />
-    <Compile Include="Utility\ErrorLogger.cs" />
-    <Compile Include="Utility\Timer.cs" />
     <Compile Include="Utility\Utility.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SDL2.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
