--- a/Ent/Ent.csproj
+++ b/Ent/Ent.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Component.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="Group.cs" />
     <Compile Include="Pool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
